# Training-NaturalLanguageProcessing

masato.shima/: Pipfile  (+1 more)
masato.shima.2020/: pyproject.toml
masato.shima.2020/app/: main.py
masato.shima.2020/app/config/: rules.lisp
masato.shima.2020/app/entrypoint/: entrypoint.py
masato.shima.2020/app/hsde/: hsde.py
masato.shima.2020/app/text/: extractor.py
masato.shima.2020/app/xbrl/: extractor.py  parser.py
masato.shima.2020/data/8001/四半期報告書－第97期第1四半期(令和2年4月1日－令和2年6月30日)/: XbrlSearchDlInfo.csv
masato.shima.2020/data/8001/四半期報告書－第97期第1四半期(令和2年4月1日－令和2年6月30日)/S100JHYW/XBRL/AuditDoc/: jpaud-qrr-cc-001_E02497-000_2020-06-30_01_2020-08-12.xbrl  jpaud-qrr-cc-001_E02497-000_2020-06-30_01_2020-08-12.xsd  jpaud-qrr-cc-001_E02497-000_2020-06-30_01_2020-08-12_ixbrl.htm  manifest_AuditDoc.xml
masato.shima.2020/data/8001/四半期報告書－第97期第1四半期(令和2年4月1日－令和2年6月30日)/S100JHYW/XBRL/PublicDoc/: 0000000_header_jpcrp040300-q1r-001_E02497-000_2020-06-30_01_2020-08-12_ixbrl.htm  0101010_honbun_jpcrp040300-q1r-001_E02497-000_2020-06-30_01_2020-08-12_ixbrl.htm  0102010_honbun_jpcrp040300-q1r-001_E02497-000_2020-06-30_01_2020-08-12_ixbrl.htm  0103010_honbun_jpcrp040300-q1r-001_E02497-000_2020-06-30_01_2020-08-12_ixbrl.htm  manifest_PublicDoc.xml  (+9 more)
masato.shima.2020/data/8001/四半期報告書－第97期第2四半期(令和2年7月1日－令和2年9月30日)/: XbrlSearchDlInfo.csv
masato.shima.2020/data/8001/有価証券報告書－第96期(平成31年4月1日－令和2年3月31日)/: XbrlSearchDlInfo.csv
masato.shima.2020/example/: extract_annotation.py  generate_rules.py
masato.shima.2020/example/data/: rules_edited.lisp  rules_origin.lisp  sample.txt
(+290 files in other folders)
